--- a/src/tpl/inc/footer.twig
+++ b/src/tpl/inc/footer.twig
@@ -46,7 +46,7 @@
                             <a class="phones__link" href="tel:+7 (83534) 2-12-51">+7 (83534) 2-12-51</a>
                         </p>
                         <p>
-                            <a class="phones__link-tx op7" href="#">Заказать звонок</a>
+                            <a class="phones__link-tx op7 js-popup-form" href="#modal-call-form">Заказать звонок</a>
                         </p>
                     </div>
                 </div>
