--- a/src/tpl/inc/pages/model-item/mlp-intro.twig
+++ b/src/tpl/inc/pages/model-item/mlp-intro.twig
@@ -11,7 +11,7 @@
         </div>
         <div class="btn-group btn-group-vertical">
             <a class="btn btn-blue" href="#">Запросить стоимость</a>
-            <a class="btn btn-blue-outline" href="#">Запросить тех. описание</a>
+            <a class="btn btn-blue-outline js-popup-form" href="#modal-model-form">Запросить тех. описание</a>
         </div>
     </div>
 </div>
