--- a/src/tpl/inc/pages/model-item/tabs.twig
+++ b/src/tpl/inc/pages/model-item/tabs.twig
@@ -28,6 +28,7 @@
                     <div id="mlp-content-1">
                         <div class="mlp-model-descr__title">Кузов</div>
                         <div class="mlp-content">
+                            <img src="images/content/catalog/card1.png" alt="" class="img-fluid mb-1">
                             <p>Кузов изготовлен по бескаркасной технологии с глухими скосами или без, по периметру обвязан алюминиевым уголком.</p>
                             <p>Наружная обшивка - плакированный металл или пластик.</p>
                             <p>
