--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -1,4 +1,35 @@
 // stylelint-disable selector-no-qualifying-type
+.form-modal {
+  position: relative;
+  max-width: 470px;
+  margin: 0 auto;
+  padding: 60px;
+  &--lg {
+    max-width: 850px;
+  }
+
+  .mfp-close {
+    top: 10px;
+    right: 10px;
+    width: 48px;
+    height: 48px;
+    background-image: url('images/svg/i-exit.svg');
+    background-position: center;
+    background-size: 48px 48px;
+    font-size: 0; 
+    opacity: 1;
+  }
+
+  .h2 {
+    max-width: 450px;
+    line-height: 1.3;
+  }
+
+  &__descr {
+    max-width: 405px;
+  }
+}
+
 
 //
 // Textual form controls
@@ -39,6 +70,16 @@
     // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655.
     opacity: 1;
   }
+}
+
+.input-error {
+  display: none;
+  font-size: 9px;
+  color: $red;
+}
+
+.has-error + .input-error {
+  display: block;
 }
 
 // Form groups
@@ -82,6 +123,11 @@
   content: "";
   background-color: $white;
   border-radius: 4px;
+
+  .bg-white & {
+    border: 1px solid $blue;
+    background-color: $gray;
+  }
 }
 .custom-control-label::after {
   position: absolute;
