--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@
 // Libs
 @import "libs/swiper";
 // @import "libs/select2/core";
-// @import "libs/magnific-popup/main";
+@import "libs/magnific-popup/main";
 @import "libs/nano";
 //-----------------------------------------
 
