--- a/src/styles/libs/magnific-popup/main.scss
+++ b/src/styles/libs/magnific-popup/main.scss
@@ -40,7 +40,7 @@
   overflow: hidden;
   position: fixed;
 
-  background: $mfp-overlay-color;
+  background: rgba(40, 43, 48, 0.8);
   opacity: $mfp-overlay-opacity;
 }
 
