--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -30,7 +30,7 @@ $blue-d1: #016990;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #dc3545 !default;
+$red:     #ff2601 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
