--- a/src/tpl/inc/header.twig
+++ b/src/tpl/inc/header.twig
@@ -13,7 +13,7 @@
                 <a class="phones__link" href="tel:8 800 250-83-03">8 800 250-83-03</a>
               </p>
               <p>
-                <a class="phones__link-tx op7" href="#">Заказать звонок</a>
+                <a class="phones__link-tx op7 js-popup-form" href="#modal-call-form">Заказать звонок</a>
               </p>
             </div>
           </div>
