--- a/src/styles/components/news-card.scss
+++ b/src/styles/components/news-card.scss
@@ -1,181 +1,216 @@
 .news-slider {
-    max-width: 1320px;
-    margin: 0 auto;
-    padding: 0 0 90px 20px;
+  max-width: 1320px;
+  margin: 0 auto;
+  padding: 0 0 90px 20px;
 
-    .swiper-pagination {
-        bottom: 30px;
-    }
+  .swiper-pagination {
+    bottom: 30px;
+  }
 }
 
 .news-list {
-    margin-bottom: 50px;
-    .news-card {
-        width: 100%;
-        max-width: 410px;
-        margin: 0 auto 20px auto;
-    }
+  margin-bottom: 50px;
+  .news-card {
+    width: 100%;
+    max-width: 410px;
+    margin: 0 auto 20px auto;
+  }
 }
 
 .news-card {
-    display: flex;
-    flex-direction: column;
-    width: 230px;
-    height: auto;
-    padding: 0 0 20px 0;
-    background-color: $white;
-    color: $dark;
-    text-decoration: none;
-    transition: box-shadow .15s;
+  display: flex;
+  flex-direction: column;
+  width: 230px;
+  height: auto;
+  padding: 0 0 20px 0;
+  background-color: $white;
+  color: $dark;
+  text-decoration: none;
+  transition: box-shadow 0.15s;
 
+  &:hover {
+    box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.09);
+    .news-card__arrow {
+      opacity: 1;
+      transform: translateX(12px);
+    }
+    .news-card__title {
+      color: $blue;
+    }
+  }
+
+  &-body {
+    padding: 15px 20px;
+  }
+  &-bottom {
+    position: relative;
+    margin-top: auto;
+    padding: 0 20px;
+  }
+
+  &__img {
+    height: 153px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transition: height 0.35s;
+
+    &--lg {
+      height: 192px;
+    }
+  }
+  &__title {
+    margin-bottom: 15px;
+    font-size: 14px;
+    line-height: 1.4;
+    font-weight: 600;
+  }
+  &__descr {
+    font-size: 11px;
+    line-height: 1.6;
+    color: $black;
+  }
+  &__date {
+    color: $blue;
+    font-weight: 600;
+    font-size: 9px;
+  }
+  &__arrow {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 30px;
+    color: $blue;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+.news-card--sr {
+
+  .news-card__descr {
+    height: 0;
+    overflow: hidden;
+    transition: height .35s;
+  }
+  .news-card__date {
+      opacity: 0;
+      transition:  opacity .35s;
+      text-decoration: none;
+  }
+
+  &:hover {
+    .news-card__img {
+      height: 0;
+    }
+    .news-card__descr {
+      height: 153px;
+    }
+    .news-card__date {
+        opacity: 1;
+    }
+  }
+
+  @include media-breakpoint-up(sm) {
     &:hover {
-        box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.09);
-        .news-card__arrow {
-            opacity: 1;
-            transform: translateX(12px);
+        .news-card__descr {
+          height: 250px;
         }
-        .news-card__title {
-            color: $blue;
-        }
-    }
-
-    &-body {
-        padding: 15px 20px;
-    }
-    &-bottom {
-        position: relative;
-        margin-top: auto;
-        padding: 0 20px;
-    }
-
-    &__img {
-        height: 150px;
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-
-        &--lg {
-            height: 192px;
-        }
-    }
-    &__title {
-        margin-bottom: 15px;
-        font-size: 14px;
-        line-height: 1.4;
-        font-weight: 600;
-    }
-    &__descr {
-        font-size: 11px;
-        line-height: 1.6;
-        color: $black;
-    }
-    &__date {
-        color: $blue;
-        font-weight: 600;
-        font-size: 9px;
-    }
-    &__arrow {
-        position: absolute;
-        z-index: 1;
-        top: 0;
-        right: 30px;
-        color: $blue;
-        opacity: 0;
-        transition: all .3s ease-in-out;
-    }
+      }
+  }
 }
 
 @include media-breakpoint-up(sm) {
-    .news-slider {
-        padding: 0 20px 90px 20px;
-    }
-    .news-list {
-        display: flex;
-        flex-wrap: wrap;
-        margin-left: -3.8%;
-        .news-card {
-            width: 46.2%;
-            max-width: 700px;
-            margin: 0 0 30px 3.8%;
-        }
-    }
-
+  .news-slider {
+    padding: 0 20px 90px 20px;
+  }
+  .news-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -3.8%;
     .news-card {
-        padding-bottom: 30px;
-        &--no-img {
-            padding-top: 20px;
-        }
-        &-body {
-            padding: 30px;
-        }
-        &-bottom {
-            padding: 0 30px;
-        }
-        &__img {
-            height: 250px;
-            &--lg {
-                height: 460px;
-            }
-        }
-        &__title {
-            margin-bottom: 35px;
-            font-size: 20px;
-        }
-        &__descr {
-            font-size: 13px;
-        }
-        &__date {
-            font-size: 13px;
-        }
-        &__arrow {
-            right: 40px;
-        }
+      width: 46.2%;
+      max-width: 700px;
+      margin: 0 0 30px 3.8%;
     }
+  }
+
+  .news-card {
+    padding-bottom: 30px;
+    &--no-img {
+      padding-top: 20px;
+    }
+    &-body {
+      padding: 30px;
+    }
+    &-bottom {
+      padding: 0 30px;
+    }
+    &__img {
+      height: 250px;
+      &--lg {
+        height: 460px;
+      }
+    }
+    &__title {
+      margin-bottom: 35px;
+      font-size: 20px;
+    }
+    &__descr {
+      font-size: 13px;
+    }
+    &__date {
+      font-size: 13px;
+    }
+    &__arrow {
+      right: 40px;
+    }
+  }
 }
 
 @include media-breakpoint-up(md) {
-    .news-list {
-        margin-left: -2.5%;
-        .news-card {
-            width: 47.5%;
-            margin-left: 2.5%;
-        }
-    }
+  .news-list {
+    margin-left: -2.5%;
     .news-card {
-        &-body {
-            padding: 30px 50px;
-        }
-        &-bottom {
-            padding: 0 50px;
-        }
-        &__img {
-            &--lg {
-                height: 575px;
-            }
-        }
-        &__title {
-            font-size: 22px;
-        }
-        &__arrow {
-            right: 60px;
-        }
+      width: 47.5%;
+      margin-left: 2.5%;
     }
+  }
+  .news-card {
+    &-body {
+      padding: 30px 50px;
+    }
+    &-bottom {
+      padding: 0 50px;
+    }
+    &__img {
+      &--lg {
+        height: 575px;
+      }
+    }
+    &__title {
+      font-size: 22px;
+    }
+    &__arrow {
+      right: 60px;
+    }
+  }
 }
 
 @include media-breakpoint-up(lg) {
-    .news-list {
-        margin-left: -2.33333%;
-        .news-card {
-            width: 31%;
-            margin-left: 2.33333%;
-        }
-    }
-
+  .news-list {
+    margin-left: -2.33333%;
     .news-card {
-        &__img {
-            &--lg {
-                height: 640px;
-            }
-        }
+      width: 31%;
+      margin-left: 2.33333%;
     }
+  }
+
+  .news-card {
+    &__img {
+      &--lg {
+        height: 640px;
+      }
+    }
+  }
 }
