--- a/src/tpl/inc/pages/service/list-service.twig
+++ b/src/tpl/inc/pages/service/list-service.twig
@@ -1,16 +1,23 @@
 <div class="service-list">
-    <a class="news-card js-fade-in" href="#">
+    <div class="news-card news-card--sr js-fade-in">
         <div class="news-card__img" style="background-image: url('https://via.placeholder.com/630x290?text=630x290')"></div>
         <div class="news-card-body">
-            <div class="news-card__title mb-0">
+            <div class="news-card__title">
                 Переоборудование транспортных средств
+            </div>
+            <div class="news-card__descr">
+                    Изготавливаем и собираем изделия для модернизации, оснащаем транспортные средства различного назначения.
+                                    Изделия поставляются с полным комплектом документов для дальнейшего использования. 
+                                    Можем покрасить и оформить фургон в соответствии с вашим фирменным стилем.
             </div>
         </div>
         <div class="news-card-bottom">
+            <a href="#modal-call-form" class="news-card__date js-popup-form">Оставить заявку</a>
             <div class="news-card__arrow">{% include "tpl/inc/svg/arrow-r.svg" %}</div>
         </div>
-    </a>
-    <a class="news-card news-card--no-img js-fade-in" href="#">
+    </div>
+    <div class="news-card news-card--sr js-fade-in">
+            <div class="news-card__img" style="background-image: url('https://via.placeholder.com/630x290?text=630x290')"></div>
         <div class="news-card-body">
             <div class="news-card__title">
                 Модернизация фургонов
@@ -22,19 +29,25 @@
             </div>
         </div>
         <div class="news-card-bottom">
-            <div class="news-card__date">Оставить заявку</div>
+            <a href="#modal-call-form" class="news-card__date js-popup-form">Оставить заявку</a>
             <div class="news-card__arrow">{% include "tpl/inc/svg/arrow-r.svg" %}</div>
         </div>
-    </a>
-    <a class="news-card js-fade-in" href="#">
+    </div>
+    <div class="news-card news-card--sr js-fade-in">
         <div class="news-card__img" style="background-image: url('https://via.placeholder.com/630x290?text=630x290')"></div>
         <div class="news-card-body">
-            <div class="news-card__title mb-0">
+            <div class="news-card__title">
                 Ремонт фургонов
             </div>
+            <div class="news-card__descr">
+                    Изготавливаем и собираем изделия для модернизации, оснащаем транспортные средства различного назначения.
+                                    Изделия поставляются с полным комплектом документов для дальнейшего использования. 
+                                    Можем покрасить и оформить фургон в соответствии с вашим фирменным стилем.
+                </div>
         </div>
         <div class="news-card-bottom">
+            <a href="#modal-call-form" class="news-card__date js-popup-form">Оставить заявку</a>
             <div class="news-card__arrow">{% include "tpl/inc/svg/arrow-r.svg" %}</div>
         </div>
-    </a>
+    </div>
 </div>
