!= html fix bug

--- a/src/tpl/inc/pages/main/intro-about.twig
+++ b/src/tpl/inc/pages/main/intro-about.twig
@@ -49,7 +49,7 @@
                 ><span class="js-spincrement" data-from="1" data-to="300"></span>
               </div>
               <div class="ia-card__text">
-                единиц техники
+                единиц<br/>техники
               </div>
             </div>
             <div class="ia-card-body">
