+ user content style

--- a/src/tpl/news-item.twig
+++ b/src/tpl/news-item.twig
@@ -1,10 +1,7 @@
 {% set headerClass = 'header--bg-gray header-static' %}
 {% set bredcreambItem = 'Новости' %}
-
 {% extends 'tpl/inc/page.twig' %}
-
 {% block content %}
-
     <div class="content">
         <div class="bg-white py-1 pt-sm-2">
             <div class="container">
@@ -13,84 +10,90 @@
                     <a class="breadcrumb-item" href="#">Новости</a>
                     <span class="breadcrumb-item">Новинка. Передвижная лаборатория ЭХЗ-ЛКСТ</span>
                 </div>
-
                 <h1 class="h1">Новинка. Передвижная лаборатория ЭХЗ-ЛКСТ</h1>
                 <p class="np-date">28 января 2019</p>
             </div>
         </div>
-
         <div class="bg-white">
             <div class="container">
                 <div class="user-text pb-5 pt-3 pb-sm-9">
                     <img alt="" class="img-fluid" src="images/temp/news4.jpg">
-
                     <div class="user-text-inner">
-                        <h3>
-                            НОВИНКА! Завод спецтехники ООО "Автофургон» изготовил партию передвижных лабораторий на шасси УРАЛ NEXT (4х4).
-                        </h3>
+                        <h2>Наши клиенты (H2)</h2>
+                        <h3>Производство и сервис (H3)</h3>
+                        <h4>Структура предприятия (H4)</h4>
+                        <h5>Переоборудование транспортных средств (H5)</h5>
                         <p>
                             Комфортабельные многофункциональные "Передвижные лаборатории ЭХЗ (электрохимзащиты) 
-                            предназначены для диагностического контроля, текущего и аварийного ремонта, действующих
-                            и вновь вводимых в эксплуатацию нефтегазопроводов различного диаметра и назначения.
-                            Автомобили изготовлены индивидуально под конечного Заказчика.
-                            Комплектация так же подобрана под работы конечного потребителя.
+                                                        предназначены для диагностического контроля, текущего и аварийного ремонта, действующих
+                                                        и вновь вводимых в эксплуатацию нефтегазопроводов различного диаметра и назначения.
+                                                        Автомобили изготовлены индивидуально под конечного Заказчика.
+                                                        Комплектация так же подобрана под работы конечного потребителя.
                         </p>
-                        <div>
+                        <p>
                             Лаборатория предусматривает два отсека Пассажирский и лабораторный:
-                        </div>
+                        </p>
                         <ul>
                             <li>
                                 Пассажирский с правом перевозки от 3 до 6 пассажиров;
                             </li>
                             <li>
                                 Лабораторном отсеке мебель и остальные комплектующие установлены так чтобы специалисты могли комфортно работать в лаборатории;
-
                             </li>
                             <li>
                                 Комплектация ЭХЗ по согласованию с Заказчиком;
                             </li>
                         </ul>
+                        <ol>
+                            <li>
+                                Пассажирский с правом перевозки от 3 до 6 пассажиров;
+                            </li>
+                            <li>
+                                Лабораторном отсеке мебель и остальные комплектующие установлены так чтобы специалисты могли комфортно работать в лаборатории;
+                            </li>
+                            <li>
+                                Комплектация ЭХЗ по согласованию с Заказчиком;
+                            </li>
+                        </ol>
                         <blockquote>
                             <p>
                                 Рестомод оснащается пятиступенчатой механический коробкой передач
-                                с короткоходной кулисой и облегченным сцеплением, а также самоблокирующимся дифференциалом. 
-                                Доработка ходовой части включает в себя установку регулируемых стоек EXE-TC, стабилизаторов 
-                                поперечной устойчивости и тормозов AP Racing с шестипоршневыми суппортами спереди 
-                                и четырехпоршневыми сзади.
+                                                                с короткоходной кулисой и облегченным сцеплением, а также самоблокирующимся дифференциалом. 
+                                                                Доработка ходовой части включает в себя установку регулируемых стоек EXE-TC, стабилизаторов 
+                                                                поперечной устойчивости и тормозов AP Racing с шестипоршневыми суппортами спереди 
+                                                                и четырехпоршневыми сзади.
                             </p>
                         </blockquote>
                         <div class="ut-img-text">
                             <img alt="" src="images/temp/news5.jpg">
                             <p>
                                 После рестайлинга Mitsubishi L200 примерил на себя фирменный стиль марки под названием 
-                                Dynamic Shield. Это целая визуальная философия, которая направлена на создание спортивного 
-                                образа в сочетании с заботой о безопасности. У нас L200 будет предлагаться с 2,4-литровым
-                                дизельным двигателем, который в зависимости от модификации выдает 154 или 181 лошадиную силу. 
-                                Коробка — шестиступенчатая «механика» либо шестидиапазонный «автомат».
+                                                                Dynamic Shield. Это целая визуальная философия, которая направлена на создание спортивного 
+                                                                образа в сочетании с заботой о безопасности. У нас L200 будет предлагаться с 2,4-литровым
+                                                                дизельным двигателем, который в зависимости от модификации выдает 154 или 181 лошадиную силу. 
+                                                                Коробка — шестиступенчатая «механика» либо шестидиапазонный «автомат».
                             </p>
                         </div>
                         <p>
                             После Второй мировой войны Япония была вынуждена поднимать промышленность и экономику с самого низа. 
-                            Внутригородские грузоперевозки были возложены на хрупкие плечи трициклов, одним из которых стал 
-                            Mitsubishi Mizushima – мотоцикл Муравей местного разлива. Со временем Mizushima эволюционировал в 
-                            Mitsubishi Leo – первый пикап марки. Несмотря на сходство с обычными трициклами, Leo обладал дверьми, 
-                            двумя посадочными местами и автомобильными органами управления, что делало его почти полноценным пикапом.
-                            Мощности одноцилиндрового 300-кубового мотора с воздушным охлаждением (а это 12,5 сил) хватало, 
-                            чтобы разгонять этого красавца до 65 километров в час и перевозить до 300 килограммов груза.
-                            Выпускался Leo недолго – с 1959 по 1962 год.
+                                                        Внутригородские грузоперевозки были возложены на хрупкие плечи трициклов, одним из которых стал 
+                                                        Mitsubishi Mizushima – мотоцикл Муравей местного разлива. Со временем Mizushima эволюционировал в 
+                                                        Mitsubishi Leo – первый пикап марки. Несмотря на сходство с обычными трициклами, Leo обладал дверьми, 
+                                                        двумя посадочными местами и автомобильными органами управления, что делало его почти полноценным пикапом.
+                                                        Мощности одноцилиндрового 300-кубового мотора с воздушным охлаждением (а это 12,5 сил) хватало, 
+                                                        чтобы разгонять этого красавца до 65 километров в час и перевозить до 300 килограммов груза.
+                                                        Выпускался Leo недолго – с 1959 по 1962 год.
                         </p>
                     </div>
-
-                    <a href="#" class="link-back">
+                    <a class="link-back" href="#">
                         <span class="link-back__arrow">
-                                {% include "tpl/inc/svg/arrow-r.svg" %}
+                            {% include "tpl/inc/svg/arrow-r.svg" %}
                         </span>
                         К списку новостей
                     </a>
                 </div>
             </div>
         </div>
-
         <div class="pt-3 pt-sm-5">
             <div class="container">
                 <h2 class="h2 h2--ut">Другие новости</h2>
@@ -98,5 +101,4 @@
             {% include "tpl/inc/components/news-slider.twig" %}
         </div>
     </div>
-
 {% endblock %}
