--- a/src/styles/pages/news.scss
+++ b/src/styles/pages/news.scss
@@ -13,8 +13,19 @@
   .link-back {
     margin-left: 75px;
   }
+  h2,
+  h3,
+  h4,
+  h5 {
+    color: $dark;
+  }
 
   h3 {
+    margin-bottom: 20px;
+    font-size: 16px;
+    font-weight: 600;
+  }
+  h5 {
     margin-bottom: 20px;
     font-size: 16px;
     font-weight: 600;
@@ -24,12 +35,10 @@
   }
   ul {
     margin: 0 0 40px 0;
-    padding: 0;
-    list-style: none;
+    padding: 0 0 0 15px;
+    list-style: disc;
     > li {
-      &:before {
-        content: '-';
-      }
+      margin-bottom: 10px;
     }
   }
   blockquote {
@@ -109,7 +118,15 @@
     }
     h3 {
       margin-bottom: 30px;
-      font-size: 20px;
+      font-size: 28px;
+      font-weight: 800;
+    }
+    h4 {
+      margin-bottom: 30px;
+    }
+    h5 {
+      margin-bottom: 30px;
+      font-size: 22px;
     }
     .img-fluid {
       margin-bottom: 50px;
