!= HTML fix bugs

--- a/src/styles/components/swiper-pagination.scss
+++ b/src/styles/components/swiper-pagination.scss
@@ -25,10 +25,12 @@
         }
     }
 
-    .no-anim & {
+    .no-anim &,
+    .ie & {
         &-active {
             .svg__circle-anim {
-                animation: circleDraw 0s linear forwards;
+                animation: none;
+                stroke-dashoffset: 0 !important;
             }
         }
     }
