--- a/src/tpl/inc/pages/contact/map.twig
+++ b/src/tpl/inc/pages/contact/map.twig
@@ -1,5 +1,5 @@
-<div class="ctp-map">
-    <a class="ctp-map__link js-map-link" href="#ctp-map">
+<div class="ctp-map" id="ctp-map-cont">
+    <a class="ctp-map__link js-map-link" href="#ctp-map-cont">
         <span class="ctp-map__link-open">
             {% include "tpl/inc/svg/i-marker.svg" %}
             Смотреть на карте
