--- a/src/styles/pages/contact.scss
+++ b/src/styles/pages/contact.scss
@@ -94,21 +94,51 @@
       font-size: 9px;
       color: $blue;
       text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+        color: $dark;
+      }
     }
   }
 }
 
 .ctp-map {
   position: relative;
-  min-height: 100px;
-  max-height: 350px;
+  height: 100px;
   border-top: 2px solid $gray;
   text-align: center;
   overflow: hidden;
+  transition: height .35s;
+
+  &:before {
+    content: '';
+    position: absolute;
+    z-index: 2;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    background-color: $white;
+    transition: opacity .2s;
+  }
+
+  &.is-opened {
+    height: 375px;
+    &:before {
+      opacity: 0;
+      pointer-events: none;
+    }
+  }
 
   &-container {
-    display: none;
+    position: absolute;
+    z-index: 1;
     height: 375px;
+    top: 0;
+    left: 0;
+    width: 100%;
   }
 
   &__link {
@@ -179,8 +209,11 @@
   }
 
   .ctp-map {
-    max-height: 700px;
+
     &-container {
+      height: 725px;
+    }
+    &.is-opened {
       height: 725px;
     }
   }
