--- a/src/tpl/inc/pages/model-item/mlp-frame.twig
+++ b/src/tpl/inc/pages/model-item/mlp-frame.twig
@@ -5,22 +5,22 @@
         <div class="swiper-container gallery-slider js-gallery-slider pb-3">
             <div class="swiper-wrapper">
                 <div class="swiper-slide gallery-card pb-0">
-                    <div class="gallery-card__img gallery-card__img--md" style="background-image: url('images/temp/model-frame.png')"></div>
+                    <a href="images/temp/model-frame.png" class="gallery-card__img gallery-card__img--md js-image-popup" style="background-image: url('images/temp/model-frame.png')"></a>
                 </div>
                 <div class="swiper-slide gallery-card pb-0">
-                    <div class="gallery-card__img gallery-card__img--md" style="background-image: url('https://via.placeholder.com/780x410?text=780x410')"></div>
+                    <a href="https://via.placeholder.com/780x410?text=780x410" class="gallery-card__img gallery-card__img--md js-image-popup" style="background-image: url('https://via.placeholder.com/780x410?text=780x410')"></a>
                 </div>
                 <div class="swiper-slide gallery-card pb-0">
-                    <div class="gallery-card__img gallery-card__img--md" style="background-image: url('https://via.placeholder.com/780x410?text=780x410')"></div>
+                    <a href="https://via.placeholder.com/780x410?text=780x410" class="gallery-card__img gallery-card__img--md js-image-popup" style="background-image: url('https://via.placeholder.com/780x410?text=780x410')"></a>
                 </div>
             </div>
             <!-- Add Pagination -->
             <div class="swiper-pagination no-anim"></div>
             <!-- Add Arrows -->
-            <div class="swiper-button-next">
+            <div class="swiper-button-next swiper-button-next--short">
                 {% include "tpl/inc/svg/arrow-r.svg" %}
             </div>
-            <div class="swiper-button-prev">
+            <div class="swiper-button-prev swiper-button-prev--short">
                 {% include "tpl/inc/svg/arrow-r.svg" %}
             </div>
         </div>
