--- a/src/tpl/inc/blocks/intro-slider.twig
+++ b/src/tpl/inc/blocks/intro-slider.twig
@@ -1,5 +1,7 @@
 <div class="swiper-container intro-slider js-intro-slider">
-    <div class="intro-slider__title">Комтехсервис</div>
+    <div class="intro-slider__title">
+      <span class="txt-sp">Комтехсервис</span>
+    </div>
   <div class="swiper-wrapper">
     <div class="swiper-slide intro-slide" >
       <div class="intro-slide__pic" style="background-image: url('images/temp/m-slide1.jpg')"></div>
