--- a/src/tpl/inc/blocks/feedback.twig
+++ b/src/tpl/inc/blocks/feedback.twig
@@ -8,14 +8,24 @@
             <div class="feedback-right">
                 <form class="feedback-form">
                     <div class="feedback-form-row feedback-form-row--frst">
-                        <div class="feedback-form-col"><input class="feedback-form__input has-error" id="" name="" placeholder="Ваше имя" type="text"></div>
-                        <div class="feedback-form-col"><input class="feedback-form__input" id="" name="" placeholder="Телефон" type="text"></div>
-                        <div class="feedback-form-col"><input class="feedback-form__input" id="" name="" placeholder="E-mail" type="text"></div>
+                        <div class="feedback-form-col">
+                            <input class="feedback-form__input has-error" id="" name="" type="text" required>
+                            <span class="floating-label">Ваше имя</span>
+                        </div>
+                        <div class="feedback-form-col">
+                            <input class="feedback-form__input" id="" name="" placeholder="" type="text" required>
+                            <span class="floating-label">Телефон</span>
+                        </div>
+                        <div class="feedback-form-col">
+                            <input class="feedback-form__input" id="" name="" type="text" required>
+                            <span class="floating-label">E-mail</span>
+                        </div>
 
                     </div>
                     <div class="feedback-form-row">
                         <div class="feedback-form-col mb-2">
-                            <input class="feedback-form__input" id="" name="" placeholder="Сообщение" type="text">
+                            <input class="feedback-form__input" id="" name="" type="text" required>
+                            <span class="floating-label">Сообщение</span>
                             <span class="feedback-form__sp">Не обязательно</span>
                         </div>
                     </div>
