--- a/src/tpl/inc/blocks/popup-call-form.twig
+++ b/src/tpl/inc/blocks/popup-call-form.twig
@@ -3,9 +3,18 @@
     <h2 class="h2 mb-1">Заказать звонок</h2>
     <p class="mb-3">Заполните форму и мы свяжемся с вами</p>
     <div class="feedback-form-row">
-        <div class="feedback-form-col w-100"><input class="feedback-form__input" id="" name="" placeholder="Ваше имя" type="text"></div>
-        <div class="feedback-form-col w-100"><input class="feedback-form__input" id="" name="" placeholder="Телефон" type="text"></div>
-        <div class="feedback-form-col w-100"><input class="feedback-form__input" id="" name="" placeholder="E-mail" type="text"></div>
+        <div class="feedback-form-col w-100">
+            <input class="feedback-form__input" id="" name="" type="text" required>
+            <span class="floating-label">Ваше имя</span>
+        </div>
+        <div class="feedback-form-col w-100">
+            <input class="feedback-form__input" id="" name="" type="text" required>
+            <span class="floating-label">Телефон</span>
+        </div>
+        <div class="feedback-form-col w-100">
+            <input class="feedback-form__input" id="" name="" type="text" required>
+            <span class="floating-label">E-mail</span>
+        </div>
     </div>
 
     <div class="feedback-form-row mb-4 mb-sm-2">
