!HTML popup gallery

--- a/src/tpl/inc/pages/model-item/mlp-frame.twig
+++ b/src/tpl/inc/pages/model-item/mlp-frame.twig
@@ -2,7 +2,7 @@
     <h3 class="h3 mlp-frame__title">Конструкция</h3>
     <div
         class="mlp-frame-top">
-        <div class="swiper-container gallery-slider js-gallery-slider pb-3">
+        <div class="swiper-container gallery-slider js-gallery-slider pb-3 js-popup-gallery">
             <div class="swiper-wrapper">
                 <div class="swiper-slide gallery-card pb-0">
                     <a href="images/temp/model-frame.png" class="gallery-card__img gallery-card__img--md js-image-popup" style="background-image: url('images/temp/model-frame.png')"></a>
